...
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        self.view.accessibilityIdentifier = "CountrySelectionView"

        view.backgroundColor = self.configuration.backgroundColor

        view.addSubview(self.headerView)
        self.headerView.configuration = self.configuration

...
                                   leading: view.safeAreaLayoutGuide.leadingAnchor,
                                   bottom: view.bottomAnchor,
                                   trailing: view.safeAreaLayoutGuide.trailingAnchor)

        self.searchView.setup(text: nil,
                              borderColor: .clear,
                              placeholder: "Search Country",
                              textFieldFocusGainCallback: nil,
                              textFieldUpdateCallback: { [weak self] textField in

                                  guard let self = self else { return }
                                  let keyword = textField.text?.trimmingCharacters(in: .whitespaces) ?? ""
                                  self.handleSearch(with: keyword)
...
